# financial-entity-cleaner

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build.yml  pre_release.yml  release.yml  test_tokens.yml
docs/source/: be_involved.rst  cleaning.rst  code.rst  conf.py  dependencies.rst  how_to.rst  index.rst  installation.rst  license.rst  project.rst  release_notes.rst  tutorials.rst
docs/source/code/: financial_entity_cleaner.auto_cleaner.rst  financial_entity_cleaner.company.rst  financial_entity_cleaner.country.rst  financial_entity_cleaner.id.rst  financial_entity_cleaner.location.rst  financial_entity_cleaner.utils.rst
financial_entity_cleaner/: __main__.py  banking_ids.py  cleaner_data.py  company.py  country.py  simple_cleaner.py
financial_entity_cleaner/auto_cleaner/: auto_cleaner.py
financial_entity_cleaner/batch/: __init__.py  _exceptions.py  cleaner.py
financial_entity_cleaner/company/: __init__.py  _exceptions.py  company.py  exceptions_company.py  name.py
financial_entity_cleaner/company/legal_forms/: ar_legal_forms.json  (+25 more)
financial_entity_cleaner/company_cleaner/: cleaning_rules.py  company.py  exceptions_company.py  legal_forms.json
financial_entity_cleaner/country/: __init__.py  exceptions.py  iso3166.py
financial_entity_cleaner/country_cleaner/: country.py  exceptions_country_cleaner.py  search_country.py
financial_entity_cleaner/exceptions/: exception_handler.py
financial_entity_cleaner/id/: __init__.py  _exceptions.py  banking.py  exceptions.py
financial_entity_cleaner/id_cleaner/: banking_id.py  exceptions_id_cleaner.py
financial_entity_cleaner/location/: __init__.py  _exceptions.py  _search_country.py  country.py
financial_entity_cleaner/text/: __init__.py  cleaning_rules.py  exceptions.py  name.py  simple_cleaner.py
financial_entity_cleaner/utils/: __init__.py  base_cleaner.py  error_handler.py  lib.py  logger.conf  simple_cleaner.py  utility.py  utils.py
notebooks/: About the library.ipynb
notebooks/how-to/: Clean a company's name.ipynb  Clean up and validate banking IDs.ipynb  Clean up company's name.ipynb  Clean up text with pre-defined rules.ipynb  Clean up texts with pre-defined regex.ipynb  Normalize country information.ipynb  Using the AutoCleaner.ipynb  Validate banking IDs.ipynb
tests/: automatic_cleaning.bat  automatic_cleaning_gleif.bat  financial-entity-cleaner-1.0.0_test  test_company_cleaner.py  test_country_cleaner.py  test_data_reader.py  test_ids_cleaner.py  test_simple_cleaner.py
tests/data/: gleif.json  test_cleaner.csv  test_cleaner.json  test_cleaner_company.csv  test_cleaner_company.json  test_cleaner_country.csv  test_cleaner_country.json  test_cleaner_ids.csv  test_cleaner_ids.json  test_simple_cleaner.csv
(+42 files in other folders)
