[tool.poetry]
name = "financial-entity-cleaner"
version = "1.0.0"
description = "Data normalization and cleaning for entity matching"
authors = ["Os-Climate Foundation <test_os-climate@gmail.com>"]
license = "Apache 2"
readme = "README.md"
homepage = "https://github.com/os-climate/financial-entity-cleaner"
keywords = ["cleaner", "validator", "normalizer"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9"
]

include = [
    "LICENSE.md",
]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''

[tool.poetry.scripts]
test = 'scripts:test'

[tool.poetry.dependencies]
python = ">=3.8"
wheel = "0.37.1"
pandas = "1.4.4"
python-stdnum = "1.17"
hdx-python-country = "3.3.7"
tqdm = "4.64.1"

[tool.poetry.dev-dependencies]
sphinx = "5.1.1"
sphinx_rtd_theme = "1.0.0"
sphinx-licenseinfo = "0.3.1"
pytest = "^6.2.5"
black = "^21.8b0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
